# deadlock-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
qt/: Window.cpp  Window.h  main.cpp
src/: BankersAlgorithm.cpp  BankersAlgorithm.h  Deadlock.cpp  Deadlock.h  DeadlockAvoidance.cpp  DeadlockAvoidance.h  DeadlockDetector.cpp  DeadlockDetector.h  DeadlockRecovery.cpp  DeadlockRecovery.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  Graph.cpp  Graph.h  Process.cpp  Process.h  Resource.cpp  Resource.h  Simulation.cpp  Simulation.h  main.cpp
tests/: BankersAlgorithmTest.cpp  BankersAlgorithmTest.h  DeadlockAvoidanceTest.cpp  DeadlockAvoidanceTest.h  DeadlockRecoveryTest.cpp  DeadlockRecoveryTest.h  DeadlockTest.cpp  DeadlockTest.h  testBasicFunctionality.cpp  testBasicFunctionality.h
utils/: detectionUtils.cpp  detectionUtils.h
